fix: Resolve 500 error when serving non-text files in TinyWeb server